--- a/jsnack-{1}/index.html
+++ b/jsnack-{1}/index.html
@@ -14,9 +14,11 @@
     <title></title>
   </head>
   <body>
-    
+
+
 
     <!-- script -->
-    <script src="js/script.js" charset="utf-8"></script>
+    <!-- <script src="js/script.js" charset="utf-8"></script> -->
+    <script src="bonus/bonus.js" charset="utf-8"></script>
   </body>
 </html>
